--- a/.tmux.conf
+++ b/.tmux.conf
@@ -14,11 +14,14 @@ bind-key C-a send-prefix
 # turn on vi key mode
 setw -g mode-keys vi
 
-# split panes using | and -
+# split panes using v and h
 bind v split-window -h
 bind h split-window -v
 unbind '"'
 unbind %
+
+# kill window using prefix k
+bind k confirm kill-window
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
