--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,9 +1,9 @@
+# source tmuxline.sh
+source $HOME/.tmuxline.sh
+
 # Start windows and panes at 1, not 0
 set -g base-index 1
 setw -g pane-base-index 1
-
-# source tmuxline
-source ~/.tmuxline.sh
 
 # Remaps
 # remap prefix from 'C-b' to 'C-a'
@@ -35,3 +35,9 @@ bind-key -n C-\\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
+
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run -b '~/.tmux/plugins/tpm/tpm'
