added keybinding kill-pane

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,8 +20,11 @@ bind h split-window -v
 unbind '"'
 unbind %
 
+# kill pane using prefix q
+bind q kill-pane
+
 # kill window using prefix k
-bind k confirm kill-window
+bind k kill-window
 
 # Smart pane switching with awareness of Vim splits.
 # See: https://github.com/christoomey/vim-tmux-navigator
