--- a/.config/coc/extensions/package.json
+++ b/.config/coc/extensions/package.json
@@ -1,18 +1,19 @@
 {
   "dependencies": {
-    "coc-css": ">=1.2.3",
+    "coc-css": ">=1.2.4",
     "coc-highlight": ">=1.2.5",
     "coc-html": ">=1.2.4",
-    "coc-java": ">=1.4.10",
-    "coc-json": ">=1.2.5",
-    "coc-markdownlint": ">=1.3.0",
+    "coc-java": ">=1.4.12",
+    "coc-json": ">=1.2.6",
+    "coc-markdownlint": ">=1.5.0",
     "coc-pairs": ">=1.2.21",
-    "coc-prettier": ">=1.1.12",
+    "coc-prettier": ">=1.1.17",
     "coc-python": ">=1.2.12",
     "coc-r-lsp": ">=1.1.1",
-    "coc-snippets": ">=2.1.26",
-    "coc-sql": ">=0.2.18",
-    "coc-xml": ">=1.11.1",
+    "coc-snippets": ">=2.1.28",
+    "coc-sql": ">=0.3.0",
+    "coc-texlab": ">=2.1.0",
+    "coc-xml": ">=1.12.0",
     "coc-yaml": ">=1.0.4"
   }
 }
